# api/app/Modules/Auth/resources/views/mail/password-changed.blade.php
@@ -1,0 +1,5 @@
+Hi {{ $name }},
+
+Your password was just changed, and you've been signed out on all devices.
+
+If this was you, there's nothing else to do. If it wasn't, reset your password right away from the sign-in page and contact support.
