# api/app/Modules/Auth/resources/views/mail/reset-password.blade.php
@@ -1,0 +1,9 @@
+Hi {{ $name }},
+
+We received a request to reset your password. Choose a new one here:
+
+{{ $resetUrl }}
+
+The link expires in 60 minutes and works once. Resetting your password signs you out on all devices.
+
+If you didn't ask for this, ignore this email; your password hasn't changed.
